<?xml version="1.0" encoding="utf-8"?>

<!--
  ~
  ~ Software Name: OCARA
  ~
  ~ SPDX-FileCopyrightText: Copyright (c) 2015-2023 Orange
  ~ SPDX-License-Identifier: MPL v2.0
  ~
  ~ This software is distributed under the Mozilla Public License v. 2.0,
  ~ the text of which is available at http://mozilla.org/MPL/2.0/ or
  ~ see the "license.txt" file for more details.
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/choose_site_tv"
            style="@style/LabelsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialogTitleTopMargin"
            android:text="@string/choose_site"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <SearchView
            android:id="@+id/siteNameET"
            android:layout_width="@dimen/search_view_width"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_name"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toStartOf="@id/addSite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_site_tv" />

        <ImageView
            android:id="@+id/addSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/selectSiteDialogStartMargin"
            app:layout_constraintBottom_toBottomOf="@+id/siteNameET"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sites_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/siteNameET"
            app:layout_constraintTop_toBottomOf="@id/siteNameET" />

        <ImageView
            android:id="@+id/close"
            android:layout_margin="@dimen/close_dialog_margin"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_baseline_close_black_24"
            android:contentDescription="@string/close_content_desc"
            android:padding="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="285dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>