...
    <string name="about">About</string>
    <string name="choose_site">choose site</string>
    <string name="add_site">Add site</string>
    <string name="street">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code (5 digits) :</string>
    <string name="create_site">Create site</string>
    <string name="site_info">Site info</string>
    <string name="modify_site">Edit site</string>
    <string name="modify_auditor">Edit auditor</string>
    <string name="create_auditor">Create auditor</string>
    <string name="name">Name :</string>
    <string name="last_name">Last name :</string>
...
    <string name="sort_by_status">Sort by status</string>
    <string name="reverse">Reverse</string>
    <string name="voir_parcours">see route</string>
    <string name="referential_type" translatable="false">Référentiel : %s</string>
    <string name="auditorName">Auditor : %s</string>
    <string name="date" translatable="false">Date : %s</string>
    <string name="siteName" translatable="false">Site : %s</string>
    <string name="all_profiles">all the profiles</string>
    <string name="commentsCount">Comments (%d)</string>
    <string name="anamoliesCount" translatable="false">Anamolies (%d)</string>

    <!--    ************************************************************************************************************ -->

...
    <string name="choose_auditor_info">The selected name will be displayed in the audit report and associated with the signature.</string>
    <string name="choose_site_title">Choose site</string>
    <string name="search_name">Search</string>
    <!--    <string name="search_name">Search by name</string>-->

    <!--    home screen -->
    <string name="create_audit">Create audit</string>
    <string name="all_audits">All the audits</string>
    <string name="home_full_paragraph">The OCARA app is a real world accessibility self-diagnostic tool. It makes it possible to assess the accessibility of user journeys on a given site based on the audit standards available for download.\n\n An object encountered on the course is referenced and evaluated in relation to the proposed criteria, then commented on. The \"objects\" are for example a p
    <string name="home_part_paragraph">The OCARA app is a real world accessibility self-diagnostic tool. It makes it possible to assess the accessibility of user journeys on a given site …</string>


    <!--Edit audit screen-->
...
